2002-11-26  Murray Cumming  <murrayc@usa.net>

	* src/project_type.c, src/project_dbase.c, src/stock_libs.anj,
	  src/compiler-options.c, src/wizard_gui.c: Renamed gtkmm 1.2
	and gnomemm 1.2 projects so that people know they are really
	glademm projects. The gtkmm 2 and gnomem 2 projects are OK though.
	But I did correct these to sue lowercase names.

2002-12-01  Naba Kumar <naba@gnome.org>

	* data/anjuta.properties: Fixed caching problem on 
	indicators.
	* src/preferences.c, src/preferences_gui.c: Implemented automatic
	indicators prefs.
	
2002-12-01  Naba Kumar <naba@gnome.org>

	* data/properies/anjuta.properties: Corrected "indicators.automatic"
	property name.
	* src/anjuta.c, src/preferences.h: Added MESSAGES_INDCATORS_AUTOMATIC
	property and uses it.
	* src/aneditor.cxx: Fixed a bug associated with selection a word at
	current cursor.
	
2002-11-30  Naba Kumar <naba@gnome.org>

	* src/debugger.c: Fixed a typo.
	* data/properties/*: Updated properties files and added
	new ones.
	* src/main_menubar_def.h, main_menubar.[hc], mainmenu_callbacks.[hc]:
	Added comment submenu and cleaned up ref and unref of menus.
	* src/aneditor.h: Added definition of comment commands.
	* src/aneditor.c: Upgrade from latest SciTE source code.
	* src/text_editor.[hc], src/text_editor_cbs.c, 
	src/message_manager_private.cc,	src/message_manager.[cc,h],
	src/anjuta.[c,h]: Added indicators support for errors/warnings
	highlight in the editor.
	* NEWS, TODO: Update.
	* scintilla/include/PropSet.h: Removed deprecrated function.
	
2002-11-29  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* src/anjuta-tools.[ch]: Tools implementation (basic)
	* src/anjuta-plugins.[ch], src/anjuta.[ch], src/main_menubar.[ch]
	  , src/main_menubar_def.h: PLugins cleanup and segregation
	* src/widget-registry.[ch], src/main_menubar.[ch]: Start of a widget
	  registry
	* anjuta.prj: Added new files
	* manuals/C/anjuta-faqs/anjuta-faqs.sgml: New FAQ entry